--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
   <section class="about">
     <h2>About Me</h2>
     <p>
-      안녕하세요, 저는 정민지입니다.  
+      안녕하세요, 정민지입니다:O  
       사람들의 마음을 오래 바라보는 일을 좋아하고,  
       다양한 방식으로 감정을 기록하고 표현합니다.
     </p>
+    <p>“감정이 지나간 자리에 기록이 남아요.”</p>
+    <p>“흔들리던 순간이 나를 만들었기에, 나는 그것을 그리고 남깁니다.”</p>
+    <p>“지금 이 순간을 이해하기 위해, 만들어 봅니다.”</p>
   </section>
 
   <section class="works">
     <h2>Works</h2>
     <div class="work-item">
       <img src="images/work1.png" alt="작업물1">
-      <p>🌱 이건 불안했던 시기에 만든 감정 기록이에요.</p>
+      <p>🌱 저의 인스타툰은, 내가 20대의 불안감을 어떻게 버텼는지를 보여주는 기록이에요.</p>
     </div>
     <!-- 다른 작업물들도 반복 -->
   </section>
@@ -36,14 +39,14 @@
   <section class="log">
     <h2>Log</h2>
     <div class="log-entry">
-      <p>2025.04.09 - 오늘은 블로그를 만들면서 진짜 오랜만에 몰입했다.</p>
+      <p>2025.04.09 - 개인 블로그 첫 개시!</p>
     </div>
   </section>
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>작업 이야기, 감정 교류하고 싶다면 편하게 연락주세요 :)</p>
-    <p>Email: mizilog@example.com</p>
+    <p>저와 이야기 나누고 싶다면 편하게 글 남겨주세요 :)</p>
+    <p>Email: alswl3225@naver.com</p>
   </section>
 
 </body>
