--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
   <section class="works">
     <h2>Works</h2>
     <div class="work-item">
-      <img src="images/work1.png" alt="작업물1">
+      <a href="work01.html">
+        <img src="images/instatoon1.jpg" alt="감정 인스타툰 썸네일">
+      </a>
+      
       <p>🌱 저의 인스타툰은, 내가 20대의 불안감을 어떻게 버텼는지를 보여주는 기록이에요.</p>
     </div>
     <!-- 다른 작업물들도 반복 -->
