--- a/work01.html
+++ b/work01.html
@@ -59,10 +59,10 @@
     나 자신을 더 이해하게 되었어요.
   </p>
 
-  <img src="images/instatoon1.jpg" alt="인스타툰1">
-  <img src="images/instatoon2.jpg" alt="인스타툰2">
-  <img src="images/instatoon3.jpg" alt="인스타툰3">
-  <img src="images/instatoon4.jpg" alt="인스타툰4">
+  <img src="instatoon1.jpg" alt="인스타툰1">
+  <img src="instatoon2.jpg" alt="인스타툰2">
+  <img src="instatoon3.jpg" alt="인스타툰3">
+  <img src="instatoon4.jpg" alt="인스타툰4">
 
   <p>
     공감받고 싶어서가 아니라,  
