--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
   <section class="works">
     <h2>Works</h2>
     <div class="work-item">
-      <a href="work01.html">
-        <img src="instatoon1.jpg" alt="감정 인스타툰 썸네일">
-      </a>
-      
       <p>🌱 저의 인스타툰은, 내가 20대의 불안감을 어떻게 버텼는지를 보여주는 기록이에요.</p>
+            <a href="work01.html">
+        <img src="instatoon1.jpg" alt="감정 인스타툰 썸네일" class="small-img">
+      </a>
     </div>
     <!-- 다른 작업물들도 반복 -->
   </section>
