--- a/work01.html
+++ b/work01.html
@@ -58,12 +58,12 @@
     말로는 설명할 수 없었던 감정을 그리는 순간,  
     나 자신을 더 이해하게 되었어요.
   </p>
-
-  <img src="instatoon1.jpg" alt="인스타툰1" class="small-img">
-  <img src="instatoon2.jpg" alt="인스타툰2" class="small-img">
-  <img src="instatoon3.jpg" alt="인스타툰3" class="small-img">
-  <img src="instatoon4.jpg" alt="인스타툰4" class="small-img">
-
+<section class="scroll-gallery">
+  <img src="instatoon1.jpg" alt="인스타툰1">
+  <img src="instatoon2.jpg" alt="인스타툰2">
+  <img src="instatoon3.jpg" alt="인스타툰3">
+  <img src="instatoon4.jpg" alt="인스타툰4">
+</section>
   <p>
     공감받고 싶어서가 아니라,  
     그때의 나에게 말 걸어주기 위해서 그렸어요.  
