--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="work-item">
       <p>🌱 저의 인스타툰은, 내가 20대의 불안감을 어떻게 버텼는지를 보여주는 기록이에요.</p>
             <a href="work01.html">
-        <img src="instatoon1.jpg" alt="감정 인스타툰 썸네일" class="small-img">
+        <img src="instatoon1.jpg" alt="감정 인스타툰 썸네일" class="scroll-gallery">
       </a>
     </div>
     <!-- 다른 작업물들도 반복 -->
